# runtime_struct_field_names_as_array

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: tests.rs
